syntax = "proto3";

package event.interaction;

option go_package = "github.com/Yux77Yux/platform_backend/generated/event/interaction;";

enum Exchange {
  EXCHANGE_COMPUTE_CREATION = 0;
  EXCHANGE_COMPUTE_USER = 1;
  EXCHANGE_UPDATE_DB = 2;
  EXCHANGE_BATCH_UPDATE_DB = 3;
  EXCHANGE_ADD_COLLECTION = 4;
  EXCHANGE_ADD_LIKE = 5;
  EXCHANGE_ADD_VIEW = 6;
  EXCHANGE_CANCEL_LIKE = 7;
  EXCHANGE_UPDATE_CREATION_ACTION_COUNT = 8;
}

enum Queue {
  QUEUE_COMPUTE_CREATION = 0;
  QUEUE_COMPUTE_USER = 1;
  QUEUE_UPDATE_DB = 2;
  QUEUE_BATCH_UPDATE_DB = 3;
  QUEUE_ADD_COLLECTION = 4;
  QUEUE_ADD_LIKE = 5;
  QUEUE_ADD_VIEW = 6;
  QUEUE_CANCEL_LIKE = 7;
}

enum RoutingKey {
  KEY_COMPUTE_CREATION = 0;
  KEY_COMPUTE_USER = 1;
  KEY_UPDATE_DB = 2;
  KEY_BATCH_UPDATE_DB = 3;
  KEY_ADD_COLLECTION = 4;
  KEY_ADD_LIKE = 5;
  KEY_ADD_VIEW = 6;
  KEY_CANCEL_LIKE = 7;
  KEY_UPDATE_CREATION_ACTION_COUNT = 8;
}